build: update unit test JVM args for Java 17 and 21
Add java command-line argument --add-opens to let
the java.base module export sun.nio.ch as open package.